welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
for (i<-0 to 6)
{
	if (vuBiscuit)
	{
		for (c<-0 to 2)
		{
			recule();
		}
	return;
	}
	else
	{
		avance();
	}
}
}
